--- a/client/src/styles/components/LoginForm.scss
+++ b/client/src/styles/components/LoginForm.scss
@@ -1,8 +1,9 @@
-.page_lauth{
+.page_auth{
     display: flex;
-    align-content: center;
+    // align-content: center;
     align-items: center;
-    gap: 50%;
+    gap: 24%;
+    padding-right: 24%;
     
     .img_text{
         width: 128%;
@@ -11,5 +12,32 @@
     .auth_menu{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        gap: 10%;
+
+    }
+    .img {
+        background-color: #1B1A17;
+        width: 878px;
+        height: 1024px;
+    }
+    .social{
+        display: flex;
+        gap:12px;
+        margin:16px;
+        cursor: no-drop;
+    }
+    
+    .auth_menu .social-icons {
+        display: flex;
+        gap: 12px;
+        margin: 16px;
+        cursor: no-drop;
+    }
+
+    form{
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
     }
 }
