--- a/client/src/styles/components/LoginForm.scss
+++ b/client/src/styles/components/LoginForm.scss
@@ -1,9 +1,9 @@
 .page_auth{
     display: flex;
-    // align-content: center;
     align-items: center;
     gap: 24%;
     padding-right: 24%;
+    margin-top: -71px;
     
     .img_text{
         width: 128%;
