--- a/client/src/styles/components/FilmFilter.scss
+++ b/client/src/styles/components/FilmFilter.scss
@@ -1,6 +1,15 @@
 
+//all 
+.more_film {
+ display: flex;
+ flex-direction: row;
+ cursor: grab;
+ gap: 24px;
+ width: 40px; 
+ height: 40px;
+}
 
-
+// width: '40px', height: '40px', objectFit: 'cover'
 //Version tablet
 @media screen and (max-width: 1023px) and (min-width: 768px) {
     .card_filter{
