--- a/client/src/styles/components/LoginForm.scss
+++ b/client/src/styles/components/LoginForm.scss
@@ -35,9 +35,22 @@
         cursor: no-drop;
     }
 
+    .msg_alert{
+        height: 100%;
+        width: 100%;
+        margin: 8%;
+        text-align: center;
+    }
+
     form{
         display: flex;
         flex-direction: column;
         gap: 16px;
     }
 }
+
+//Responsive
+
+//---------------------
+
+//Responsive
