--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,3 +4,24 @@
   padding: 0;
   margin: 0;
 }
+
+/*Temp transition style*/
+.slide-in {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0f0f0f;
+  transform-origin: bottom;
+}
+
+.slide-out {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0f0f0f;
+  transform-origin: top;
+}
