--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -12,8 +12,9 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #0f0f0f;
-  transform-origin: bottom;
+  background: #1B1A17;
+  transform-origin: left; 
+  animation: slideOut 0.5s forwards; 
 }
 
 .slide-out {
@@ -22,6 +23,13 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #0f0f0f;
-  transform-origin: top;
+  background: #1B1A17;
+  transform-origin: left; 
+  animation: slideOut 0.5s forwards; 
+}
+
+@keyframes slideOut {
+  100% {
+    transform: translateX(100%); 
+  }
 }
