--- a/client/src/styles/pages/Page_addFilm.scss
+++ b/client/src/styles/pages/Page_addFilm.scss
@@ -1,6 +1,23 @@
-.new_film_input{
-    display: flex;
-    flex-direction: column;
-    width: 641px;
-    height: 65px;
-}
+    .new_film_input{
+        display: flex;  
+        flex-direction: row;
+        background-color: hotpink;
+
+        .form_all{
+            display: flex;
+            flex-direction: row;
+            gap: 104px;
+        }
+        .form_1{
+            display: flex;
+            flex-direction: column;
+            background-color: yellow;
+        }
+        .form_2{
+            display: flex;
+            flex-direction: column;
+            background-color: red;
+        }
+    }
+
+
